src/bash_api_gen.h

/* ── Macro-unwrapping accessors ─────────────────────────────────────────── */

ARRAY_ELEMENT  *l_array_head(ARRAY *a);
ARRAY_ELEMENT  *l_element_forw(ARRAY_ELEMENT *ae);
char           *l_element_value(ARRAY_ELEMENT *ae);
int             l_readonly_p(SHELL_VAR *var);
int             l_invisible_p(SHELL_VAR *var);
int             l_array_p(SHELL_VAR *var);
ARRAY          *l_array_cell(SHELL_VAR *var);
char           *l_value_cell(SHELL_VAR *var);
char *l_expand_string_to_string_in_quotes(const char *string);